<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="20">

    <TextView
        style="@style/textSize"
        android:text="@string/txtCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:paddingTop="50dp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:paddingBottom="20dp"/>

    <EditText
        style="@style/textSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:ems="10"
        android:id="@+id/edAddCategoria"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:singleLine="true"
       />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">
    <LinearLayout
        android:id="@+id/lay_lin_dialog_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        android:background="@android:color/holo_blue_dark"
        >

        <Button
            android:text="@string/btnAnadir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAddCategoria"
            android:layout_weight="1" />

        <Button
            android:text="@string/btnVolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnVolverCategoria"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/lay_lin_dialog_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="invisible"
            android:background="@android:color/holo_blue_dark"
            >
        <Button
            android:text="@string/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnGuardarDialogCategoria"
            android:layout_weight="1" />
        <Button
            android:text="@string/btnBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnBorrarCategoria"
            android:layout_weight="1" />
        <Button
            android:text="@string/btnVolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnVolverCategoriaR"
            android:layout_weight="1" />

    </LinearLayout>
    </FrameLayout>
</LinearLayout>